# openalex-analysis

./: .gitignore  .gitmodules  Concepts_works_analysis.ipynb  Dockerfile  Element_works_analysis.ipynb  EntitiesAnalysis.py  EntitiesConceptsAnalysis.py  EntitiesConceptsPlot.py  EntitiesPlot.py  MANIFEST.in  OA_entities_names.py  README.md  README_examples.ipynb  References_works_analysis.ipynb  Setup_example.ipynb  Untitled.ipynb  Works_examples.ipynb  build_docker_container.sh  dash_app_configuration_template.py  dash_app_passwords_template.py  docker-compose.yml  docker_var.env  index.html  layout_parameters.py  main_app.py  plot_collaborations_eut+_2023.html  pyproject.toml  redis.conf  requirements.txt  start_celery_worker.sh  upgrade-docker-container.sh
doc/: Doxyfile  conf.py  index.html
doc/html/: annotated.html  classEntitiesConceptsAnalysis_1_1AuthorsConceptsAnalysis-members.html  classEntitiesConceptsAnalysis_1_1AuthorsConceptsAnalysis.html  classEntitiesConceptsAnalysis_1_1AuthorsConceptsAnalysis__coll__graph.map  (+172 more)
doc/latex/: annotated.tex  (+84 more)
docs/: _config.yml  index.html  reference.rst
entitie_name_files_update_tools/: Download_all_institutions_names_and_ids.ipynb  generate_compressed_data_files_for_package.py
openalex_analysis/: __init__.py
pages/: home.py  institutions_comparison.py  institutions_plot.py
sphinx-doc/: Makefile  conf.py  example_works_concepts.rst  examples.rst  index.rst  setup_and_settings.rst  usage.rst
tests/: README.md  test-openalex-analysis-conf-without_parameter.toml  test-openalex-analysis-conf.toml  tests.py
(+96 files in other folders)
