[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-analysis"
version = "0.13.1"
description = "A python library to download, analyse or plot articles, institutions, and other entities from the OpenAlex API"
readme = "README.md"
authors = [{ name = "Romain Thomas", email = "romain.thomas@su.se" }]
license = { file = "LICENCE.txt" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]
keywords = ["OpenAlex", "Data analysis", "Scientific research", "Plotly"]
dependencies = [
    "numpy >= 1.21.5",
    "pandas >= 2.0.1",
    "plotly >= 5.15.0",
    "psutil >= 5.9.4",
    "pyalex >= 0.14",
    "tqdm >= 4.65.0",
    "requests",
    "pyarrow"
]
requires-python = ">=3.10"

[tool.setuptools]
#include-package-data = true
packages = ["openalex_analysis", "openalex_analysis.data", "openalex_analysis.analysis", "openalex_analysis.plot"]

[project.urls]
Homepage = "https://github.com/romain894/openalex-analysis"
Documentation = "https://romain894.github.io/openalex-analysis/html/index.html"
